--- a/references.bib
+++ b/references.bib
@@ -348,3 +348,13 @@ isbn="978-3-319-17091-6"
   isbn = {9780262046305},
   pages = {1312},
 }
+
+@book{Rosen2018,
+  author = {Kenneth H. Rosen},
+  title = {Discrete Mathematics and Its Applications},
+  edition = {8},
+  year = {2018},
+  publisher = {McGraw Hill},
+  isbn = {9781259676512},
+  pages = {1120},
+}
