Added Ross references and a few changes.

--- a/references.bib
+++ b/references.bib
@@ -160,7 +160,7 @@
   doi = {10.1038/323533a0}}
 
 @article{Cortes1995,
-  author = {Cortes, Corinna and Vapnik, Vladimir},
+  author = {Cortes, Corinna and Vapnik, Vladimir Naumovich},
   title = {Support-vector networks},
   journal = {Machine Learning},
   volume = {20},
@@ -357,4 +357,24 @@ isbn="978-3-319-17091-6"
   publisher = {McGraw Hill},
   isbn = {9781259676512},
   pages = {1120},
+}
+
+@book{Ross2014,
+  author = {Sheldon M. Ross},
+  title = {Introduction to Probability Models},
+  edition = {11},
+  year = {2014},
+  publisher = {Academic Press},
+  isbn = {9780124079489},
+  pages = {784},
+}
+
+@book{Ross2019,
+  author = {Sheldon M. Ross},
+  title = {A First Course in Probability},
+  edition = {10},
+  year = {2018},
+  publisher = {Pearson},
+  isbn = {978-1292269207},
+  pages = {528},
 }
