--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -795,41 +795,53 @@ roots of the polynomial $\det(A - \lambda I_n) = 0$, where $I_n$ is the $n \time
 
 \section{Probability}
 
+Probability is the branch of mathematics that studies the likelihood of events.  It is
+used to model uncertainty and randomness.  The basic objects of probability are events
+and random variables.
+
+For a comprehensive material about probability theory, the reader is referred to
+\textcite{Ross2019}\footfullcite{Ross2019} and \textcite{Ross2014}\footfullcite{Ross2014}.
+
+\subsection{Axioms of probability and main concepts}
+
 The Kolmogorov axioms of probability are the foundation of probability theory.
 They are
 \begin{enumerate}
-  \item The probability of an event $A$ is a non-negative real number, i.e. $P(A) \geq 0$;
-  \item The probability of the sample space $\Omega$ is one, i.e. $P(\Omega) = 1$; and
+  \item The probability of an event $A$ is a non-negative real number, i.e. $\Prob(A) \geq 0$;
+  \item The probability of the sample space $\Omega$\footnote{The set of all possible
+    events.} is one, i.e. $\Prob(\Omega) = 1$; and
   \item The probability of the union of disjoint events, $A \cap B = \emptyset$, is
-    the sum of the probabilities of the events, i.e. $P(A \cup B) = P(A) + P(B)$.
+    the sum of the probabilities of the events, i.e. $\Prob(A \cup B) = \Prob(A) + \Prob(B)$.
 \end{enumerate}
 
+\paragraph{Sum rule}
+A particular consequence of the third axiom is the addition law of probability.
 If $A$ and $B$ are not disjoint, then
 \begin{equation*}
-  P(A \cup B) = P(A) + P(B) - P(A \cap B)\text{.}
+  \Prob(A \cup B) = \Prob(A) + \Prob(B) - \Prob(A \cap B)\text{.}
 \end{equation*}
 
 \paragraph{Joint probability}
 
 The joint probability of two events $A$ and $B$ is the probability that both events
-occur.  It is denoted by $P(A, B) = P(A \cap B)$.
+occur.  It is denoted by $\Prob(A, B) = \Prob(A \cap B)$.
 
 \paragraph{Law of total probability}
 
 The law of total probability states that if $B_1, \dots, B_n$ are disjoint events
 such that $\cup_{i = 1}^n B_i = \Omega$, then for any event $A$, we have that
-$$P(A) = \sum_{i = 1}^n P(A, B_i)\text{.}$$
+$$\Prob(A) = \sum_{i = 1}^n \Prob(A, B_i)\text{.}$$
 
 \paragraph{Conditional probability}
 
 The conditional probability of an event $A$ given an event $B$ is the probability
-that $A$ occurs given that $B$ occurs.  It is denoted by $P(A \mid B)$.
+that $A$ occurs given that $B$ occurs.  It is denoted by $\Prob(A \mid B)$.
 
 \paragraph{Independence}
 
 Two events $A$ and $B$ are independent if the probability of $A$ given $B$ is the
-same as the probability of $A$, i.e. $P(A \mid B) = P(A)$.  It is equivalent to
-$P(A, B) = P(A) \cdot P(B)$.
+same as the probability of $A$, i.e. $\Prob(A \mid B) = \Prob(A)$.  It is equivalent to
+$\Prob(A, B) = \Prob(A) \cdot \Prob(B)$.
 
 \paragraph{Bayes' rule}
 
@@ -837,8 +849,11 @@ Bayes' rule is a formula that relates the conditional probability of an event $A
 given an event $B$ to the conditional probability of $B$ given $A$.  It is
 \begin{equation}
   \label{eq:bayes}
-  P(A \mid B) = \frac{P(B \mid A) \cdot P(A)}{P(B)}\text{.}
+  \Prob(A \mid B) = \frac{\Prob(B \mid A) \cdot \Prob(A)}{\Prob(B)}\text{.}
 \end{equation}
+Bayes' rule is one of the most important formulas in probability theory and is used
+in many areas of science and engineering.  Particularly, for data science, it is
+used in Bayesian statistics and machine learning.
 
 \subsection{Random variables}
 
