Moving things back to dsp-book.

--- a/about.tex
+++ b/about.tex
@@ -22,9 +22,9 @@
 
 \vfill
 
-\begin{parwithqr}{https://comp.ita.br/\~verri/ds-book-print}
+\begin{parwithqr}{https://comp.ita.br/\~verri/dsp-book-print}
   Students can found a printable version (A4 paper, double-sided, short-edge spiral
-  binding) of this book at \href{\aurl}{comp.ita.br/\textasciitilde{}verri/ds-book-print}.
+  binding) of this book at \href{\aurl}{comp.ita.br/\textasciitilde{}verri/dsp-book-print}.
 \end{parwithqr}
 
 \newpage
