--- a/courses.tex
+++ b/courses.tex
@@ -74,7 +74,7 @@ The first two books (\citeauthor{Zumel2019,Wickham2023}) are available online fo
 % \paragraph{Must read:}
 % \begin{itemize}
 %   \itemsep 0pt
-%   \item In-progress textbook at \href{https://comp.ita.br/~verri/ds-book}{comp.ita.br/~verri/ds-book}.
+%   \item In-progress textbook at \href{https://comp.ita.br/~verri/dsp-book}{comp.ita.br/~verri/dsp-book}.
 %   \item \fullcite{Vapnik1999}.
 %   \item \fullcite{Benavoli2017}.
 % \end{itemize}
@@ -207,7 +207,7 @@ The first two books (Zumel and Mount, and Wickham and Grolemund) are available o
 \thispagestyle{empty}
 \paragraph{Recommended reading:}
 \begin{itemize}
-  \item In-progress textbook at \href{https://comp.ita.br/~verri/ds-book}{comp.ita.br/\textasciitilde{}verri/ds-book}.
+  \item In-progress textbook at \href{https://comp.ita.br/~verri/dsp-book}{comp.ita.br/\textasciitilde{}verri/dsp-book}.
   \item \fullcite{Vapnik1999}.
   \item \fullcite{Benavoli2017}.
 \end{itemize}
